...
 * and avoid duplicate movie IDs in the result set.
 */
struct MockSearchService: SearchService {
    // All available mock movies with unique IDs
    private let allMockMovies = [
        Movie(id: 346_698,
              title: "Barbie",
              overview: "Barbie and Ken are having the time of their lives in the colorful " +
                  "and seemingly perfect world of Barbie Land. However, when they get a chance to " +
                  "go to the real world, they soon discover the joys and perils of living among humans.",
              posterPath: ""),

        Movie(id: 615_656,
...
